--- a/tests/SearchAPI.Tests/SearchAPI.Tests.csproj
+++ b/tests/SearchAPI.Tests/SearchAPI.Tests.csproj
@@ -56,6 +56,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Grammar\LastUpdatedLexerTests.cs" />
     <Compile Include="Grammar\SkipLexerTests.cs" />
     <Compile Include="Grammar\SortLexerTests.cs" />
     <Compile Include="Grammar\TakeLexerTests.cs" />
